# fcos_c

./: CMakeLists.txt  config.yaml  inference.py  main.cpp  register.py
cmake/: cuda.cmake
deploy/: Detection.py  Fcos3d.py  Model.py  __init__.py  aug.py  compose.py  formating.py  loadimage.py  logging.py  preprocess_image.py  transforms_3d.py  utils.py
deploy/box/: base_box3d.py  cam_box3d.py
deploy/data/: collate.py  data_container.py  scatter_gather.py
deploy/points/: base_points.py
include/: affine.cuh  buffers.h  common.h  config.h  cuda_utils.hpp  logging.h  macros.h  preprocess.h  types.h
src/: Tensorrt.cpp  Tensorrt.h  affine.cu  cuda_utils.cpp  preprocess.cpp
tensorrt/bicubic_interpolate/: trt_bicubic_interpolate.cpp
tensorrt/common/: trt_plugin_base.hpp
tensorrt/deform_conv/: trt_deform_conv_kernel.cu  trt_deform_conv_kernel.cuh
